iter_language/tests/corpus/compose/valid/trigger-watch-cooldown-alias.iter
queue main file { path = "./.iter/queue" }

trigger dep watch {
    dir = "./src"
    cooldown = 5s
    target = main
}
