iter_language/tests/corpus/compose/invalid/command-on-error-unknown.iter
queue main file { path = "./.iter/queue" }

trigger probe command {
    run = "ls"
    on_error = halt
    target = main
}
